H0-14 | Implementazione base della business logic degli eventi
