# src/main/java/it/avbo/tps/hoolibo/trops/api/database/ConnectionFactory.java
@@ -39,8 +39,35 @@ public class ConnectionFactory {
                 "  PRIMARY KEY (`email`)\n" +
                 ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;";
 
+        String createEventTable =
+                "CREATE TABLE `events` (\n" +
+                "  `event_uuid` varchar(36) NOT NULL,\n" +
+                "  `tipo` varchar(3) NOT NULL,\n" +
+                "  `sport` varchar(9) NOT NULL,\n" +
+                "  `data` timestamp NOT NULL,\n" +
+                "  `max_partecipanti` int(11) NOT NULL,\n" +
+                "  `titolo` varchar(100) NOT NULL,\n" +
+                "  `descrizione` varchar(255) DEFAULT NULL,\n" +
+                "  `organizer` varchar(255) NOT NULL,\n" +
+                "  PRIMARY KEY (`event_uuid`),\n" +
+                "  KEY `events_accounts_FK` (`organizer`),\n" +
+                "  CONSTRAINT `events_accounts_FK` FOREIGN KEY (`organizer`) REFERENCES `accounts` (`email`) ON DELETE CASCADE\n" +
+                ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;";
+
+        String createSubTable =
+                "CREATE TABLE IF NOT EXISTS `subscriptions` (\n" +
+                "  `user` varchar(255) NOT NULL,\n" +
+                "  `event` varchar(36) NOT NULL,\n" +
+                "  KEY `subscriptions_accounts_FK` (`user`),\n" +
+                "  KEY `subscriptions_events_FK` (`event`),\n" +
+                "  CONSTRAINT `subscriptions_accounts_FK` FOREIGN KEY (`user`) REFERENCES `accounts` (`email`) ON DELETE CASCADE,\n" +
+                "  CONSTRAINT `subscriptions_events_FK` FOREIGN KEY (`event`) REFERENCES `events` (`event_uuid`) ON DELETE CASCADE\n" +
+                ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;";
+
         try (Connection conn = ds.getConnection()) {
             conn.prepareStatement(createAccountTable).execute();
+            conn.prepareStatement(createEventTable).execute();
+            conn.prepareStatement(createSubTable).execute();
         } catch (SQLException e) {
             logger.error("Errore nella creazione delle tabelle");
         }
