# src/main/webapp/openapi.yaml
@@ -139,7 +139,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/failure-response'
   /account/session/deactivate:
-    post:
+    delete:
       summary: Disattiva un token di sessione
       description: Questo endpoint serve per disattivare un token di sessione, nel caso si vuole fare logout o roba del genere. Richiede un header di autorizzazione, che è il token che vi siete salvati prima, dal login oppure dalla registrazione. Invece il campo deactivated-session, nel body della richiesta è il token che si vuole disattivare.
       tags:
@@ -171,6 +171,91 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/failure-response'
+  /events/list:
+    get:
+      summary: Ottieni la lista di tutti gli eventi disponibili
+      description: Questo endpoint serve per ottenere la lista di tutti gli eventi attivi futuri, presenti e passati. Richiede un header di autorizzazione, che è il token che vi siete salvati prima, dal login oppure dalla registrazione. P.S. Continuare.
+      tags:
+        - Events
+      security:
+        - SessionToken: [ ]
+      responses:
+        '200':
+          description: Successo
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/success-response'
+        '500':
+          description: Fallimento
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/failure-response'
+  /events/list/filtered:
+    get:
+      summary: Ottieni la lista di alcuni degli eventi
+      description: Questo endpoint serve per ottenere la lista di tutti gli eventi attivi futuri, presenti e passati che rispettano un filtro particolare deciso dall'utente. Richiede un header di autorizzazione, che è il token che vi siete salvati prima, dal login oppure dalla registrazione. P.S. Continuare.
+      tags:
+        - Events
+      security:
+        - SessionToken: [ ]
+      parameters:
+        - in: path
+          name: tipo
+          schema:
+            type: string
+            example: SCO
+          required: false
+          description: Tipologia degli eventi (scolastici o extra scolastici)
+        - in: path
+          name: sport
+          schema:
+            type: string
+            example: basket
+          required: false
+          description: Lo sport dell'evento (basket, calcio, pallavolo)
+        - in: path
+          name: datamin
+          schema:
+            type: string
+            example: 2024-5-16
+          required: false
+          description: La data minima degli eventi
+        - in: path
+          name: datamax
+          schema:
+            type: string
+            example: 2024-5-16
+          required: false
+          description: La data massima degli eventi
+        - in: path
+          name: partecipanti
+          schema:
+            type: int
+            example: 0
+          required: false
+          description: Il numero attuale di partecipanti
+        - in: path
+          name: maxpartecipanti
+          schema:
+            type: int
+            example: 10
+          required: false
+          description: Il numero massimo di partecipanti dell'evento
+      responses:
+        '200':
+          description: Successo
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/success-response'
+        '500':
+          description: Fallimento
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/failure-response'
   /events/create:
     post:
       summary: Crea un nuovo evento
@@ -185,6 +270,31 @@ paths:
           multipart/form-data:
             schema:
               type: object
+              required:
+                - tipo
+                - sport
+                - data_event
+                - max_partecipanti
+                - titolo
+              properties:
+                tipo:
+                  type: string
+                  example: SCO
+                sport:
+                  type: string
+                  example: basket
+                data_event:
+                  type: string
+                  example: 2024-7-16 10:00:00
+                max_partecipanti:
+                  type: string
+                  example: 10
+                titolo:
+                  type: string
+                  example: Torneo di basket
+                descrizione:
+                  type: string
+                  example: Example event
       responses:
         '200':
           description: Successo
@@ -199,7 +309,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/failure-response'
   /events/delete:
-    post:
+    delete:
       summary: Elimina un event
       description: Questo endpoint serve per eliminare un evento esistente. Richiede un header di autorizzazione, che è il token che vi siete salvati prima, dal login oppure dalla registrazione. P.S. Continuare.
       tags:
@@ -212,6 +322,12 @@ paths:
           multipart/form-data:
             schema:
               type: object
+              required:
+                - uuid
+              properties:
+                uuid:
+                  type: string
+                  example: 550e8400-e29b-41d4-a716-446655440000
       responses:
         '200':
           description: Successo
@@ -239,6 +355,12 @@ paths:
           multipart/form-data:
             schema:
               type: object
+              required:
+                - uuid
+              properties:
+                uuid:
+                  type: string
+                  example: 550e8400-e29b-41d4-a716-446655440000
       responses:
         '200':
           description: Successo
@@ -253,7 +375,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/failure-response'
   /events/unsubscribe:
-    post:
+    delete:
       summary: Disiscriviti da un evento
       description: Questo endpoint serve per disiscrivere un utente da un evento a cui sta partecipando o che si è iscritto in passato. Richiede un header di autorizzazione, che è il token che vi siete salvati prima, dal login oppure dalla registrazione. P.S. Continuare.
       tags:
@@ -266,6 +388,12 @@ paths:
           multipart/form-data:
             schema:
               type: object
+              required:
+                - uuid
+              properties:
+                uuid:
+                  type: string
+                  example: 550e8400-e29b-41d4-a716-446655440000
       responses:
         '200':
           description: Successo
